--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Type It or Die</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="styles.css"/>
   <script defer src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
   <style>
     body {
@@ -31,7 +31,7 @@
       font-size: 2rem;
       margin: 20px 0;
     }
-    input[type="text"], #nameInput {
+    input, #nameInput {
       padding: 10px;
       font-size: 1.2rem;
       width: 100%;
@@ -63,32 +63,31 @@
       color: white;
       cursor: pointer;
     }
-    #nameContainer {
-      margin-top: 15px;
-    }
-    #startBtn {
-      margin-top: 15px;
-    }
   </style>
 </head>
 <body>
   <div class="game-container">
     <h1>Type It or Die</h1>
     <p>Type the words fast! Miss one and it's over. Bonus time for hard words.</p>
-    <div id="nameContainer">
-      <input type="text" id="nameInput" placeholder="Enter your name..." />
+    
+    <div id="nameInputContainer">
+      <input type="text" id="nameInput" placeholder="Enter your name" />
       <button id="startBtn">Start Game</button>
     </div>
+
     <div class="word-display" id="word"></div>
     <input type="text" id="text" autocomplete="off" placeholder="Type here..." disabled />
+    
     <div class="info">
       <div>Time: <span id="time">10</span>s</div>
       <div>Score: <span id="score">0</span></div>
     </div>
+
     <div class="leaderboard" id="leaderboard">
       <h3>🏆 Global Highscores</h3>
       <ul id="scores"></ul>
     </div>
+
     <div class="share-buttons">
       <button onclick="shareTwitter()">Share on Twitter</button>
       <button onclick="shareFacebook()">Share on Facebook</button>
@@ -110,10 +109,6 @@
   <audio id="failSound" src="https://assets.mixkit.co/sfx/preview/mixkit-wrong-answer-fail-notification-946.mp3"></audio>
 
   <script>
-    const easyWords = ["apple", "sun", "cat", "ball", "car", "dog", "home", "fish", "star", "cake", "milk", "book", "pen", "tree", "shoe"];
-    const hardWords = ["algorithm", "hypothesis", "cryptography", "juxtaposition", "miscellaneous"];
-    let words = [...easyWords, ...hardWords];
-
     const wordEl = document.getElementById("word");
     const text = document.getElementById("text");
     const scoreEl = document.getElementById("score");
@@ -121,9 +116,9 @@
     const scoresList = document.getElementById("scores");
     const successSound = document.getElementById("successSound");
     const failSound = document.getElementById("failSound");
-    const nameInput = document.getElementById("nameInput");
     const startBtn = document.getElementById("startBtn");
-    const nameContainer = document.getElementById("nameContainer");
+    const nameInput = document.getElementById("nameInput");
+    const nameInputContainer = document.getElementById("nameInputContainer");
 
     let score = 0;
     let time = 10;
@@ -131,13 +126,17 @@
     let timerInterval;
     let playerName = "Anonymous";
 
+    // ✅ Här är en lång lista med ord (kan fyllas på ytterligare)
+    const easyWords = ["apple", "sun", "cat", "ball", "car", "dog", "home", "fish", "star", "cake", "milk", "book", "pen", "tree", "shoe", "table", "chair", "water", "cup", "light", "phone", "door", "grass", "sky", "cloud"];
+    const hardWords = ["algorithm", "hypothesis", "cryptography", "juxtaposition", "miscellaneous", "equilibrium", "consciousness", "philosophy", "transcendental", "configuration"];
+    let words = [...easyWords, ...hardWords];
+
     const supabaseUrl = "https://wtzfzuragddwggmdemqf.supabase.co";
     const supabaseKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Ind0emZ6dXJhZ2Rkd2dnbWRlbXFmIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTQ1MDAxOTEsImV4cCI6MjA3MDA3NjE5MX0.eNFGNive5js3JYBnKpVMPlI5Xi0CKdxfUWNklRzA9F0";
     const supabase = supabase.createClient(supabaseUrl, supabaseKey);
 
     function getRandomWord() {
-      const idx = Math.floor(Math.random() * words.length);
-      return words[idx];
+      return words[Math.floor(Math.random() * words.length)];
     }
 
     function displayWord() {
@@ -163,15 +162,17 @@
     }
 
     function startGame() {
-      playerName = nameInput.value.trim() || "Anonymous";
-      nameContainer.style.display = "none";
+      if (nameInput.value.trim() !== "") {
+        playerName = nameInput.value.trim();
+      }
+      nameInputContainer.style.display = "none";
+      text.disabled = false;
+      text.focus();
+      displayWord();
       score = 0;
       time = 10;
       scoreEl.innerText = score;
       timeEl.innerText = time;
-      text.disabled = false;
-      displayWord();
-      text.focus();
       timerInterval = setInterval(() => {
         time--;
         timeEl.innerText = time;
@@ -196,6 +197,8 @@
         }
       }
     });
+
+    startBtn.addEventListener("click", startGame);
 
     async function saveScore(newScore) {
       const { error } = await supabase.from("highscores").insert([
@@ -226,7 +229,6 @@
       window.open(`https://www.facebook.com/sharer/sharer.php?u=${url}`, "_blank");
     }
 
-    startBtn.addEventListener("click", startGame);
     loadScores();
   </script>
 </body>
