--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Type It or Die</title>
-  <link rel="stylesheet" href="styles.css"/>
+  <link rel="stylesheet" href="styles.css" />
+  <script defer src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
   <style>
     body {
       margin: 0;
@@ -30,7 +31,7 @@
       font-size: 2rem;
       margin: 20px 0;
     }
-    input {
+    input, button {
       padding: 10px;
       font-size: 1.2rem;
       width: 100%;
@@ -52,14 +53,14 @@
     .share-buttons {
       margin-top: 20px;
     }
-    button {
-      margin: 5px;
-      padding: 8px 15px;
-      font-size: 1rem;
-      border: none;
-      border-radius: 5px;
+    #nameInputContainer {
+      margin-top: 20px;
+    }
+    #startBtn {
       background: #2e8b57;
       color: white;
+      border: none;
+      border-radius: 5px;
       cursor: pointer;
     }
   </style>
@@ -68,25 +69,20 @@
   <div class="game-container">
     <h1>Type It or Die</h1>
     <p>Type the words fast! Miss one and it's over. Bonus time for hard words.</p>
-
     <div id="nameInputContainer">
-      <input type="text" id="nameInput" placeholder="Enter your name" />
+      <input type="text" id="playerName" placeholder="Enter your name" />
       <button id="startBtn">Start Game</button>
     </div>
-
     <div class="word-display" id="word"></div>
-    <input type="text" id="text" autocomplete="off" placeholder="Type here..." disabled />
-
+    <input type="text" id="text" autocomplete="off" placeholder="Type here..." style="display:none;" />
     <div class="info">
       <div>Time: <span id="time">10</span>s</div>
       <div>Score: <span id="score">0</span></div>
     </div>
-
-    <div class="leaderboard">
+    <div class="leaderboard" id="leaderboard">
       <h3>🏆 Global Highscores</h3>
       <ul id="scores"></ul>
     </div>
-
     <div class="share-buttons">
       <button onclick="shareTwitter()">Share on Twitter</button>
       <button onclick="shareFacebook()">Share on Facebook</button>
@@ -107,24 +103,12 @@
   <audio id="successSound" src="https://assets.mixkit.co/sfx/preview/mixkit-positive-interface-beep-221.mp3"></audio>
   <audio id="failSound" src="https://assets.mixkit.co/sfx/preview/mixkit-wrong-answer-fail-notification-946.mp3"></audio>
 
-  <!-- Supabase SDK -->
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-
   <script>
-    // Replace with your actual Supabase values
-    const SUPABASE_URL = "https://wtzfzuragddwggmdemqf.supabase.co";
-    const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Ind0emZ6dXJhZ2Rkd2dnbWRlbXFmIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTQ1MDAxOTEsImV4cCI6MjA3MDA3NjE5MX0.eNFGNive5js3JYBnKpVMPlI5Xi0CKdxfUWNklRzA9F0";
+    const easyWords = ["apple", "sun", "cat", "ball", "car", "dog", "home", "fish", "star", "cake", "milk", "book", "pen", "tree", "shoe"];
+    const hardWords = ["algorithm", "hypothesis", "cryptography", "juxtaposition", "miscellaneous"];
+    const extraWords = ["planet", "rocket", "banana", "python", "keyboard", "monitor", "science", "future", "travel", "happiness", "strategy", "gadget", "network", "ocean", "system", "virtual", "wizard", "energy", "signal", "memory"];
+    let words = [...easyWords, ...hardWords, ...extraWords];
 
-    let supabase;
-    if (SUPABASE_URL.includes("YOUR_PROJECT")) {
-      console.warn("Supabase is not configured. Highscore saving will be skipped.");
-    } else {
-      supabase = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
-    }
-
-    const nameInput = document.getElementById("nameInput");
-    const startBtn = document.getElementById("startBtn");
-    const nameInputContainer = document.getElementById("nameInputContainer");
     const wordEl = document.getElementById("word");
     const text = document.getElementById("text");
     const scoreEl = document.getElementById("score");
@@ -132,6 +116,9 @@
     const scoresList = document.getElementById("scores");
     const successSound = document.getElementById("successSound");
     const failSound = document.getElementById("failSound");
+    const startBtn = document.getElementById("startBtn");
+    const playerNameInput = document.getElementById("playerName");
+    const nameInputContainer = document.getElementById("nameInputContainer");
 
     let score = 0;
     let time = 10;
@@ -139,21 +126,13 @@
     let timerInterval;
     let playerName = "Anonymous";
 
-    const words = [
-      // 500+ English words (truncated for brevity, but I can send full list)
-      "apple","sun","cat","dog","fish","ball","car","book","light","door","table",
-      "chair","grass","sky","cloud","milk","pen","tree","shoe","water","cup","phone",
-      "bird","happy","quick","smart","blue","yellow","green","write","dance","sing",
-      "run","jump","slow","fast","clean","dirty","sweet","sharp","soft","loud",
-      "quiet","tall","small","wide","narrow","deep","shallow","round","square","cold",
-      "hot","fire","ice","wind","snow","rain","storm","sunny","cloudy","foggy",
-      // Add 400+ more words here as needed
-      "algorithm","hypothesis","cryptography","juxtaposition","miscellaneous",
-      "equilibrium","consciousness","philosophy","transcendental","configuration"
-    ];
+    const supabaseUrl = "https://wtzfzuragddwggmdemqf.supabase.co";
+    const supabaseKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Ind0emZ6dXJhZ2Rkd2dnbWRlbXFmIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTQ1MDAxOTEsImV4cCI6MjA3MDA3NjE5MX0.eNFGNive5js3JYBnKpVMPlI5Xi0CKdxfUWNklRzA9F0";
+    const supabase = supabase.createClient(supabaseUrl, supabaseKey);
 
     function getRandomWord() {
-      return words[Math.floor(Math.random() * words.length)];
+      const idx = Math.floor(Math.random() * words.length);
+      return words[idx];
     }
 
     function displayWord() {
@@ -179,22 +158,27 @@
     }
 
     function startGame() {
-      playerName = nameInput.value.trim() || "Anonymous";
+      playerName = playerNameInput.value.trim() || "Anonymous";
       nameInputContainer.style.display = "none";
+      text.style.display = "block";
       text.disabled = false;
-      text.value = "";
       text.focus();
       displayWord();
       score = 0;
       time = 10;
       scoreEl.innerText = score;
       timeEl.innerText = time;
+      clearInterval(timerInterval);
       timerInterval = setInterval(() => {
         time--;
         timeEl.innerText = time;
-        if (time === 0) gameOver();
+        if (time === 0) {
+          gameOver();
+        }
       }, 1000);
     }
+
+    startBtn.addEventListener("click", startGame);
 
     text.addEventListener("input", e => {
       const typedText = e.target.value.trim();
@@ -203,23 +187,18 @@
         displayWord();
         e.target.value = "";
         updateScore();
-        updateTime(currentWord.length > 8 ? 3 : 1);
+        updateTime(hardWords.includes(currentWord) ? 3 : 1);
       }
     });
 
-    startBtn.addEventListener("click", startGame);
-    nameInput.addEventListener("keydown", e => {
-      if (e.key === "Enter") startGame();
-    });
-
     async function saveScore(newScore) {
-      if (!supabase) return;
-      const { error } = await supabase.from("highscores").insert([{ name: playerName, score: newScore }]);
+      const { error } = await supabase.from("highscores").insert([
+        { name: playerName, score: newScore }
+      ]);
       if (!error) loadScores();
     }
 
     async function loadScores() {
-      if (!supabase) return;
       const { data, error } = await supabase
         .from("highscores")
         .select("name, score")
