--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Type It or Die</title>
-  <link rel="stylesheet" href="styles.css" />
   <script defer src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
   <style>
     body {
@@ -31,11 +30,10 @@
       font-size: 2rem;
       margin: 20px 0;
     }
-    input, button {
+    input[type="text"] {
       padding: 10px;
       font-size: 1.2rem;
       width: 100%;
-      margin-top: 10px;
     }
     .info {
       display: flex;
@@ -53,15 +51,18 @@
     .share-buttons {
       margin-top: 20px;
     }
-    #nameInputContainer {
-      margin-top: 20px;
-    }
-    #startBtn {
-      background: #2e8b57;
-      color: white;
+    button {
+      margin: 5px;
+      padding: 8px 15px;
+      font-size: 1rem;
       border: none;
       border-radius: 5px;
+      background: #2e8b57;
+      color: white;
       cursor: pointer;
+    }
+    #startBtn, #nameInput {
+      margin-top: 15px;
     }
   </style>
 </head>
@@ -69,20 +70,23 @@
   <div class="game-container">
     <h1>Type It or Die</h1>
     <p>Type the words fast! Miss one and it's over. Bonus time for hard words.</p>
-    <div id="nameInputContainer">
-      <input type="text" id="playerName" placeholder="Enter your name" />
-      <button id="startBtn">Start Game</button>
-    </div>
+
+    <input type="text" id="nameInput" placeholder="Enter your name...">
+    <button id="startBtn">Start Game</button>
+
     <div class="word-display" id="word"></div>
-    <input type="text" id="text" autocomplete="off" placeholder="Type here..." style="display:none;" />
+    <input type="text" id="text" autocomplete="off" placeholder="Type here..." disabled />
+
     <div class="info">
       <div>Time: <span id="time">10</span>s</div>
       <div>Score: <span id="score">0</span></div>
     </div>
+
     <div class="leaderboard" id="leaderboard">
       <h3>🏆 Global Highscores</h3>
       <ul id="scores"></ul>
     </div>
+
     <div class="share-buttons">
       <button onclick="shareTwitter()">Share on Twitter</button>
       <button onclick="shareFacebook()">Share on Facebook</button>
@@ -104,10 +108,9 @@
   <audio id="failSound" src="https://assets.mixkit.co/sfx/preview/mixkit-wrong-answer-fail-notification-946.mp3"></audio>
 
   <script>
-    const easyWords = ["apple", "sun", "cat", "ball", "car", "dog", "home", "fish", "star", "cake", "milk", "book", "pen", "tree", "shoe"];
-    const hardWords = ["algorithm", "hypothesis", "cryptography", "juxtaposition", "miscellaneous"];
-    const extraWords = ["planet", "rocket", "banana", "python", "keyboard", "monitor", "science", "future", "travel", "happiness", "strategy", "gadget", "network", "ocean", "system", "virtual", "wizard", "energy", "signal", "memory"];
-    let words = [...easyWords, ...hardWords, ...extraWords];
+    const easyWords = ["apple", "sun", "cat", "ball", "car", "dog", "home", "fish", "star", "cake", "milk", "book", "pen", "tree", "shoe", "cup", "hat", "mouse", "grass", "phone"];
+    const hardWords = ["algorithm", "hypothesis", "cryptography", "juxtaposition", "miscellaneous", "philosophy", "constitution", "transcendental", "multiplication", "unpredictable"];
+    const words = [...easyWords, ...hardWords];
 
     const wordEl = document.getElementById("word");
     const text = document.getElementById("text");
@@ -116,9 +119,8 @@
     const scoresList = document.getElementById("scores");
     const successSound = document.getElementById("successSound");
     const failSound = document.getElementById("failSound");
+    const nameInput = document.getElementById("nameInput");
     const startBtn = document.getElementById("startBtn");
-    const playerNameInput = document.getElementById("playerName");
-    const nameInputContainer = document.getElementById("nameInputContainer");
 
     let score = 0;
     let time = 10;
@@ -128,11 +130,10 @@
 
     const supabaseUrl = "https://wtzfzuragddwggmdemqf.supabase.co";
     const supabaseKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Ind0emZ6dXJhZ2Rkd2dnbWRlbXFmIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTQ1MDAxOTEsImV4cCI6MjA3MDA3NjE5MX0.eNFGNive5js3JYBnKpVMPlI5Xi0CKdxfUWNklRzA9F0";
-    const supabase = supabase.createClient(supabaseUrl, supabaseKey);
+    const supabaseClient = supabase.createClient(supabaseUrl, supabaseKey);
 
     function getRandomWord() {
-      const idx = Math.floor(Math.random() * words.length);
-      return words[idx];
+      return words[Math.floor(Math.random() * words.length)];
     }
 
     function displayWord() {
@@ -158,27 +159,26 @@
     }
 
     function startGame() {
-      playerName = playerNameInput.value.trim() || "Anonymous";
-      nameInputContainer.style.display = "none";
-      text.style.display = "block";
+      if (nameInput.value.trim() !== "") {
+        playerName = nameInput.value.trim();
+      }
+      nameInput.style.display = "none";
+      startBtn.style.display = "none";
       text.disabled = false;
       text.focus();
-      displayWord();
       score = 0;
       time = 10;
       scoreEl.innerText = score;
       timeEl.innerText = time;
-      clearInterval(timerInterval);
+      displayWord();
       timerInterval = setInterval(() => {
         time--;
         timeEl.innerText = time;
-        if (time === 0) {
+        if (time <= 0) {
           gameOver();
         }
       }, 1000);
     }
-
-    startBtn.addEventListener("click", startGame);
 
     text.addEventListener("input", e => {
       const typedText = e.target.value.trim();
@@ -187,19 +187,26 @@
         displayWord();
         e.target.value = "";
         updateScore();
-        updateTime(hardWords.includes(currentWord) ? 3 : 1);
+
+        if (hardWords.includes(currentWord)) {
+          updateTime(3);
+        } else {
+          updateTime(1);
+        }
       }
     });
 
+    startBtn.addEventListener("click", startGame);
+
     async function saveScore(newScore) {
-      const { error } = await supabase.from("highscores").insert([
+      const { error } = await supabaseClient.from("highscores").insert([
         { name: playerName, score: newScore }
       ]);
       if (!error) loadScores();
     }
 
     async function loadScores() {
-      const { data, error } = await supabase
+      const { data, error } = await supabaseClient
         .from("highscores")
         .select("name, score")
         .order("score", { ascending: false })
